--- a/ProjetGl/ProjetGl.csproj
+++ b/ProjetGl/ProjetGl.csproj
@@ -272,7 +272,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Account\Role.cshtml" />
     <Content Include="Views\Backlogs\Create.cshtml" />
     <Content Include="Views\Backlogs\Delete.cshtml" />
     <Content Include="Views\Backlogs\Details.cshtml" />
@@ -308,6 +307,7 @@
     <Content Include="Views\Taches\Details.cshtml" />
     <Content Include="Views\Taches\Edit.cshtml" />
     <Content Include="Views\Taches\Index.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
